# ComfyUI-Specter

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  chatgpt.py  config.py  models.json  pyproject.toml  requirements.txt  routes.py  specter.py
data/: aesthetics.json  enhancement_presets.json  models.json  system_prompts.json
data/wildcards/ideas/: actions.txt  adjectives.txt  settings.txt  subjects.txt
data/wildcards/ideas/subjects/: creature.txt  object.txt  person.txt  scene.txt
docs/: screenshot_workflow.py
docs/examples/: chatgpt_hybrid.py  chatgpt_minimal.py
example_workflows/: chatgpt_chat.json  chatgpt_image_describer.json  chatgpt_img2img.json  chatgpt_prompt_enhancer.json  chatgpt_txt2img.json  flow_i2v.json  flow_img_edit.json  flow_ref2v.json  flow_txt2img.json  flow_txt2vid.json  gemini_chat.json  gemini_txt2img.json  grok_chat.json  grok_img2vid.json  grok_img_edit.json  grok_txt2img.json  grok_txt2vid.json  idea_style_enhance_generate.json  image_describer.json  img2img_edit.json  prompt_enhancer.json  txt2img_basic.json
specter/: __init__.py  browser.py  chatgpt.py  config.py  exceptions.py  login_stream.py  nodes.py  routes.py  session.py
specter/cli/: __init__.py  __main__.py  main.py  onboard.py
specter/core/: __init__.py  browser.py  config.py  debug.py  exceptions.py  session.py  utils.py  wildcards.py
specter/providers/: __init__.py  base.py  chatgpt.py  flow_i2i.py  flow_i2v.py  flow_ref2v.py  flow_t2i.py  flow_t2v.py  gemini.py  grok_chat.py  grok_t2i.py  grok_video.py
specter/providers/grok/: IMAGINE_INTERNALS.md  __init__.py  chat.py  imagine.py  t2i.py
web/: appearance.js  specter-dialogs.js  specter-settings.js
workflows/: image_describer.json  img2img_edit.json  prompt_enhancer.json
